src/unit_tests/CustCodeGeneration/success/abort.cl
class Main {
    main() : Object {
        self.abort()
    };
};