src/unit_tests/CustCodeGeneration/fail/wtf.cl
class Main {
    main() : B { new B };
};

class B { b : B <- new B; };